...
    <string name="sunrise">Sunrise:</string>
    <string name="sunset">Sunset:</string>
    <string name="enterNumber">Enter number</string>
    <string name="lat">Lat:</string>
    <string name="longitude">Longitude:</string>
    <string name="lookup" >Lookup</string>
    <string name="view">View</string>
    <string name="favourate">Favourite</string>
    <string name="latlgt">Lat---------Lng</string>

    <string name="sundb" translatable="false">sundb</string>
    <string name="searchRecord" translatable="false">searchRecord</string>
    <string name="latSearch" translatable="false">latSearch</string>
...
    <string name="sl_ifo_titlr">Sun Lookup</string>
    <string name="delete">Delete</string>
    <string name="first">Sunrise/Sunset</string>
    <string name="second">Recipe</string>
    <string name="third">Dictionary</string>
    <string name="forth">Deezer Song</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="word">Word</string>
    <string name="hint">Enter a word</string>
    <string name="definition">Definition</string>
    <string name="search">Look up</string>
    <string name="save">Save</string>
    <string name="read">View</string>
    <string name="history">Search History</string>
    <string name="dic_database_name" translatable="false">database-dictionary</string>
    <string name="record_goes_here">Record goes here</string>
    <string name="dic_sharedPreferences_name" translatable="false">MyDictionary</string>
    <string name="question">Question: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="undo">Undo</string>
    <string name="deleted_message">You deleted record #</string>
    <string name="want_to_delete">Do you want to delete this term? </string>
    <string name="dictionary_information">The APP support user to look up the definitions of word which is entered by the user. User can click save button to save the search term and definitions in the database and click view button to see the history of the search term and definitions.</string>
    <string name="dictionary_info_title">Dictionary API instructions</string>
    <string name="back">Back Home</string>
    <string name="error_msg">Please enter a valid word</string>
    <string name="sun">Sunrise and Sunset lookup</string>
    <string name="RecipeSearch">Recipe Search</string>
    <string name="da">Dictionary API</string>
    <string name="dssa">Deezer song search api</string>
    <string name="thank">Thank you using this APP</string>
    <string name="Welcome">Welcome</string>

    <!--Recipe Search value strings-->
    <string name="search_hint">Enter a recipe name...</string>
    <string name="search_button">Search</string>
    <string name="favorite_recipes">favorite list</string>
    <string name="enter_search_term">Please enter a search term.</string>
...
